Finished Validity percentage for company columns

--- a/src/CompanyValidity.ipynb
+++ b/src/CompanyValidity.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,22 +163,21 @@
    "outputs": [],
    "source": [
     "#Here is the validity function I will be using\n",
-    "#For every valid company code in the dataset, num_valid is incremented by 1. At the end that number is divided by all the length\n",
-    "#of the entire unique list to get a decimal\n",
+    "#returns the sum of True and divides by the length of the unique list\n",
     "def checkValidity(ls, col = code_dict.code.tolist()):\n",
     "    return sum([code in col for code in ls]) / len(ls)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['CDRL', 'RKIMSY', 'BDORF', 'CESUKL', 'SKLJEQ', 'JAPLLC', 'BIONZU', 'UWJYAB', 'CRSUPZ', 'AUBSPL']\n",
+      "['USACMM', 'BRKLC', 'SXCHIC', 'HCAHN', 'HATTFN', 'DDEBCI', 'CYTVAB', 'EESYSI', 'WHREIT', 'UFEDTE']\n",
       "There are 73688 unique company codes\n"
      ]
     }
@@ -199,14 +198,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['BDORF', 'CESUKL', 'SKLJEQ', 'JAPLLC', 'BIONZU', 'UWJYAB', 'CRSUPZ', 'AUBSPL', 'NTADSC', 'FLAFRA']\n",
+      "['USACMM', 'SXCHIC', 'HCAHN', 'HATTFN', 'DDEBCI', 'WHREIT', 'UFEDTE', 'NYXGGL', 'ADISIG', 'HKELEC']\n",
       "There are 62381 unique companies in unique_companies_occur\n"
      ]
     }
@@ -227,14 +226,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['SKLJEQ', 'BIONZU', 'CRSUPZ', 'IPENIP', 'NTADSC', 'FLAFRA', 'PRZACL', 'RALDRG', 'GZMMOL', 'CIRPA']\n",
+      "['USACMM', 'BRKLC', 'SXCHIC', 'HATTFN', 'WHREIT', 'UFEDTE', 'AMRTSL', 'DHOSPC', 'PANCHN', 'UNGLOC']\n",
       "There are 30780 unique companies in unique_companies_about\n"
      ]
     }
@@ -255,14 +254,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['uvbgdy', 'conun', 'nrph', 'rsmnnd', 'cncn', 'nstrci', 'piagci', 'fndcll', 'manccm', 'amexpr']\n",
+      "['USACMM', 'SXCHIC', 'HCAHN', 'HATTFN', 'EESYSI', 'CYTVAB', 'WHREIT', 'UFEDTE', 'QMTLCI', 'NYXGGL']\n",
       "There are 66451 unique companies in unique_companies_relevance\n"
      ]
     }
@@ -276,21 +275,21 @@
     "\n",
     "unique_companies_relevance = list(unique_companies_relevance)\n",
     "unique_companies_relevance = unique_companies_relevance[1:]\n",
-    "\n",
+    "unique_companies_relevance = [word.upper() for word in unique_companies_relevance]\n",
     "print(unique_companies_relevance[0:10])\n",
     "print(\"There are {} unique companies in unique_companies_relevance\".format(len(unique_companies_relevance)))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['CHNLIB', 'KTZEN', 'DYNTL', 'ISTHMA', 'BXRGRP', 'ZFPZUR', 'UNNATF', 'RCNGYI', 'LEETH', 'SASILI']\n",
+      "['MMRRDC', 'TUDB', 'CHINAC', 'MZZNML', 'BARDCR', 'TMMHLP', 'HILIND', 'HEALLC', 'GLBLHC', 'LINPL']\n",
       "There are 3467 unique companies in unique_companies_lineage\n"
      ]
     }
@@ -313,54 +312,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Uploading the data dictionary into a dataframe\n",
-    "code_dict = pd.read_csv(\"../data/original/Company Codes Dictionary.csv\")"
+    "code_dict = pd.read_csv(\"../data/original/companies.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#print(checkValidity(unique_companies_lineage))\n",
-    "profile.iloc[3] = checkValidity(unique_companies_lineage)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "profile.iloc[0] = checkValidity(unique_company_codes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "profile.iloc[2] = checkValidity(unique_companies_about)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "profile.iloc[1] = checkValidity(unique_companies_occur)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -390,44 +352,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1048570</th>\n",
-       "      <td>KWGMA</td>\n",
-       "      <td>Kawagoeshi Ishikai General Inc. Association</td>\n",
+       "      <th>2129169</th>\n",
+       "      <td>ZZZXCL</td>\n",
+       "      <td>Zhejiang Zhongcheng Zhineng Xinxi Co. Ltd</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1048571</th>\n",
-       "      <td>KWGNG</td>\n",
-       "      <td>Kondor Wessels Grundstücksverwaltung NRW GmbH</td>\n",
+       "      <th>2129170</th>\n",
+       "      <td>ZZZYIC</td>\n",
+       "      <td>Zhejiang Zhuji Zhimai Yuanhe Investment Co. Ltd.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1048572</th>\n",
-       "      <td>KWGNII</td>\n",
-       "      <td>Innodel SA</td>\n",
+       "      <th>2129171</th>\n",
+       "      <td>ZZZZCP</td>\n",
+       "      <td>Zhejiang Zheneng Zhongmei Zhoushan Coal Power ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1048573</th>\n",
-       "      <td>KWGOL</td>\n",
-       "      <td>Kwik Goal</td>\n",
+       "      <th>2129172</th>\n",
+       "      <td>ZZZZOO</td>\n",
+       "      <td>10000114 Science And Technology Co. Ltd.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1048574</th>\n",
-       "      <td>KWGOL</td>\n",
-       "      <td>Kwik Goal</td>\n",
+       "      <th>2129173</th>\n",
+       "      <td>ZZZZZ</td>\n",
+       "      <td>Asiri Surgical Hospital Plc</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           code                                    description\n",
-       "1048570   KWGMA    Kawagoeshi Ishikai General Inc. Association\n",
-       "1048571   KWGNG  Kondor Wessels Grundstücksverwaltung NRW GmbH\n",
-       "1048572  KWGNII                                     Innodel SA\n",
-       "1048573   KWGOL                                      Kwik Goal\n",
-       "1048574   KWGOL                                      Kwik Goal"
+       "           code                                        description\n",
+       "2129169  ZZZXCL          Zhejiang Zhongcheng Zhineng Xinxi Co. Ltd\n",
+       "2129170  ZZZYIC   Zhejiang Zhuji Zhimai Yuanhe Investment Co. Ltd.\n",
+       "2129171  ZZZZCP  Zhejiang Zheneng Zhongmei Zhoushan Coal Power ...\n",
+       "2129172  ZZZZOO           10000114 Science And Technology Co. Ltd.\n",
+       "2129173   ZZZZZ                        Asiri Surgical Hospital Plc"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +400,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print(checkValidity(unique_companies_lineage))\n",
+    "profile.iloc[3] = checkValidity(unique_companies_lineage)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profile.iloc[0] = checkValidity(unique_company_codes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profile.iloc[2] = checkValidity(unique_companies_about)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profile.iloc[1] = checkValidity(unique_companies_occur)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profile.iloc[4] = checkValidity(unique_companies_relevance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -468,23 +476,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>company_codes</th>\n",
-       "      <td>0.445799</td>\n",
+       "      <td>0.868595</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>company_codes_occur</th>\n",
-       "      <td>0.458890</td>\n",
+       "      <td>0.891650</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>company_codes_about</th>\n",
-       "      <td>0.508415</td>\n",
+       "      <td>0.994087</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>company_codes_lineage</th>\n",
-       "      <td>0.516873</td>\n",
+       "      <td>0.993654</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>company_codes_relevance</th>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.860634</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -492,119 +500,29 @@
       ],
       "text/plain": [
        "                         Validity\n",
-       "company_codes            0.445799\n",
-       "company_codes_occur      0.458890\n",
-       "company_codes_about      0.508415\n",
-       "company_codes_lineage    0.516873\n",
-       "company_codes_relevance  0.000000"
+       "company_codes            0.868595\n",
+       "company_codes_occur      0.891650\n",
+       "company_codes_about      0.994087\n",
+       "company_codes_lineage    0.993654\n",
+       "company_codes_relevance  0.860634"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Final validity percentages\n",
     "profile"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>code</th>\n",
-       "      <th>description</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1048570</th>\n",
-       "      <td>KWGMA</td>\n",
-       "      <td>Kawagoeshi Ishikai General Inc. Association</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1048571</th>\n",
-       "      <td>KWGNG</td>\n",
-       "      <td>Kondor Wessels Grundstücksverwaltung NRW GmbH</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1048572</th>\n",
-       "      <td>KWGNII</td>\n",
-       "      <td>Innodel SA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1048573</th>\n",
-       "      <td>KWGOL</td>\n",
-       "      <td>Kwik Goal</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1048574</th>\n",
-       "      <td>KWGOL</td>\n",
-       "      <td>Kwik Goal</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           code                                    description\n",
-       "1048570   KWGMA    Kawagoeshi Ishikai General Inc. Association\n",
-       "1048571   KWGNG  Kondor Wessels Grundstücksverwaltung NRW GmbH\n",
-       "1048572  KWGNII                                     Innodel SA\n",
-       "1048573   KWGOL                                      Kwik Goal\n",
-       "1048574   KWGOL                                      Kwik Goal"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "code_dict.tail()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1048575, 2)"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "code_dict.shape"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
