Added some markdown

--- a/src/CompanyValidity.ipynb
+++ b/src/CompanyValidity.ipynb
@@ -23,32 +23,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['copyright', 'subject_codes', 'art', 'modification_datetime', 'body',\n",
-       "       'company_codes_occur', 'company_codes_about', 'company_codes_lineage',\n",
-       "       'snippet', 'publication_date', 'market_index_codes', 'credit',\n",
-       "       'currency_codes', 'region_of_origin', 'ingestion_datetime',\n",
-       "       'modification_date', 'source_name', 'language_code', 'region_codes',\n",
-       "       'company_codes_association', 'person_codes', 'byline',\n",
-       "       'company_codes_relevance', 'source_code', 'an', 'word_count',\n",
-       "       'company_codes', 'industry_codes', 'title', 'publication_datetime',\n",
-       "       'publisher_name', 'action', 'document_type', 'section', 'dateline'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df.columns"
+    "<h2><b>Getting only the columns that deal with the company codes</b></h2>"
    ]
   },
   {
@@ -79,6 +57,13 @@
     "#There are no values in this column so it will not be part of the validating process\n",
     "print(companies['company_codes_association'].value_counts())\n",
     "companies = df[['company_codes', 'company_codes_occur', 'company_codes_about', 'company_codes_lineage', 'company_codes_relevance']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2><b>Creating a profile table for validity</b></h2>"
    ]
   },
   {
@@ -157,6 +142,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2><b>Creating validity function</b></h2>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -166,6 +158,13 @@
     "#returns the sum of True and divides by the length of the unique list\n",
     "def checkValidity(ls, col = code_dict.code.tolist()):\n",
     "    return sum([code in col for code in ls]) / len(ls)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2><b>Getting unique codes for each column</b></h2>"
    ]
   },
   {
@@ -311,6 +310,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2><b>Loading in company code dictionary</b></h2>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -321,81 +327,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>code</th>\n",
-       "      <th>description</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2129169</th>\n",
-       "      <td>ZZZXCL</td>\n",
-       "      <td>Zhejiang Zhongcheng Zhineng Xinxi Co. Ltd</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2129170</th>\n",
-       "      <td>ZZZYIC</td>\n",
-       "      <td>Zhejiang Zhuji Zhimai Yuanhe Investment Co. Ltd.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2129171</th>\n",
-       "      <td>ZZZZCP</td>\n",
-       "      <td>Zhejiang Zheneng Zhongmei Zhoushan Coal Power ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2129172</th>\n",
-       "      <td>ZZZZOO</td>\n",
-       "      <td>10000114 Science And Technology Co. Ltd.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2129173</th>\n",
-       "      <td>ZZZZZ</td>\n",
-       "      <td>Asiri Surgical Hospital Plc</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           code                                        description\n",
-       "2129169  ZZZXCL          Zhejiang Zhongcheng Zhineng Xinxi Co. Ltd\n",
-       "2129170  ZZZYIC   Zhejiang Zhuji Zhimai Yuanhe Investment Co. Ltd.\n",
-       "2129171  ZZZZCP  Zhejiang Zheneng Zhongmei Zhoushan Coal Power ...\n",
-       "2129172  ZZZZOO           10000114 Science And Technology Co. Ltd.\n",
-       "2129173   ZZZZZ                        Asiri Surgical Hospital Plc"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "code_dict.tail()"
+    "<h2><b>Checking validity for each column and applying the result to the profile table</b></h2>"
    ]
   },
   {
@@ -445,8 +380,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2><b>Company Code Validity Results</b></h2>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -507,29 +449,107 @@
        "company_codes_relevance  0.860634"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Final validity percentages\n",
     "profile"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<h2><b>Getting the invalid company codes</b></h2>"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Getting all the invalid company codes\n",
+    "invalid_company_codes = np.array([])\n",
+    "for co in unique_company_codes:\n",
+    "    if co not in code_dict.code.tolist():\n",
+    "        invalid_company_codes = np.append(invalid_company_codes, co)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 9683 company codes in the dataset that are not in the dictionary\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"There are {} company codes in the dataset that are not in the dictionary\".format(len(invalid_company_codes)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2><b>Double checking that the codes in the invalid list is not valid (Should get 0% valid)</b></h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(checkValidity(invalid_company_codes))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2><b>Listing some of the invalid codes (aka codes in the dataset but not in the dictionary)</b></h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['HCAHN', 'EESYSI', 'CNHSER', 'DRXPHS', 'SUPRGB', 'ARIZOV',\n",
+       "       'CNVMIRD', 'ALSPIU', 'OLYHSC', 'WARGTI', 'PRIFPP', 'TQRWFP',\n",
+       "       'ENDNOT', 'ADDOWHL', 'BUVSMOG', 'HKEABG', 'CSTPUP', 'MSUCHS',\n",
+       "       'AGGXYGK', 'HOCAGU', 'ATEASL', 'AAHOVFH', 'ENENGC', 'GCACRT',\n",
+       "       'COPHAH', 'UGAMSO', 'AOLDGTF', 'VCPMFE', 'OSCHWE', 'CVBUIHB'],\n",
+       "      dtype='<U32')"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "invalid_company_codes[0:30]"
+   ]
   },
   {
    "cell_type": "code",
