Fixed some markup

--- a/src/CompanyValidity.ipynb
+++ b/src/CompanyValidity.ipynb
@@ -492,14 +492,14 @@
     }
    ],
    "source": [
-    "print(\"There are {} company codes in the dataset that are not in the dictionary\".format(len(invalid_company_codes)))"
+    "print(\"There are {} company codes in the company codes column that are not in the dictionary\".format(len(invalid_company_codes)))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2><b>Double checking that the codes in the invalid list is not valid (Should get 0% valid)</b></h2>"
+    "<h2><b>Double checking to make sure that no codes in the invalid_company_codes list are valid (Should get 0% valid)</b></h2>"
    ]
   },
   {
