--- a/src/CompanyValidity.ipynb
+++ b/src/CompanyValidity.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "company_codes_relevance       0.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,14 +169,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['USACMM', 'BRKLC', 'SXCHIC', 'HCAHN', 'HATTFN', 'DDEBCI', 'CYTVAB', 'EESYSI', 'WHREIT', 'UFEDTE']\n",
+      "['ELECNE', 'KUKXBV', 'FRWHTH', 'PFROGI', 'CHSUN', 'LZBIOC', 'TISST', 'MINDA', 'ITDRST', 'WSGRPU']\n",
       "There are 73688 unique company codes\n"
      ]
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,14 +480,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 9683 company codes in the dataset that are not in the dictionary\n"
+      "There are 9683 company codes in the company codes column that are not in the dictionary\n"
      ]
     }
    ],
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -528,21 +528,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['HCAHN', 'EESYSI', 'CNHSER', 'DRXPHS', 'SUPRGB', 'ARIZOV',\n",
-       "       'CNVMIRD', 'ALSPIU', 'OLYHSC', 'WARGTI', 'PRIFPP', 'TQRWFP',\n",
-       "       'ENDNOT', 'ADDOWHL', 'BUVSMOG', 'HKEABG', 'CSTPUP', 'MSUCHS',\n",
-       "       'AGGXYGK', 'HOCAGU', 'ATEASL', 'AAHOVFH', 'ENENGC', 'GCACRT',\n",
-       "       'COPHAH', 'UGAMSO', 'AOLDGTF', 'VCPMFE', 'OSCHWE', 'CVBUIHB'],\n",
+       "array(['KUKXBV', 'AMSFFRA', 'LUNFCI', 'GANCMM', 'INSTLC', 'BZHTAKX',\n",
+       "       'BFLMII', 'LVDTIN', 'DALNGEZ', 'CUCMAL', 'CRPZJHJ', 'AHMUCPH',\n",
+       "       'CADRHL', 'RHALUM', 'AWTRA', 'AKVYHCU', 'ORTHVT', 'KLINGC',\n",
+       "       'KLICO', 'REESSQ', 'WELHGL', 'MOCENU', 'APPUDYG', 'COJZCJA',\n",
+       "       'CSUFFR', 'OCOUHD', 'GNTXUI', 'NOVPLL', 'NIKOUI', 'PITTOI'],\n",
        "      dtype='<U32')"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,10 +553,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df['Row'] = np.arange(0, len(df)) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2><b>Filtering through the dataset and keeping track of rows with at least one invalid company in them</b></h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#subset1 = df[0:100000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "invalid_row = []\n",
+    "for row in df.itertuples():\n",
+    "    for code in row.company_codes.split(\",\"):\n",
+    "        if code.upper() in invalid_company_codes:\n",
+    "            invalid_row.append(row.Row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 231025 rows with at least one invalid company code in the company_codes column, which is about 11.891005762138708% of the entire dataset\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"There are {} rows with at least one invalid company code in the company_codes column, which is about {}% of the entire dataset\".format(len(invalid_row),  len(invalid_row) / len(df) * 100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[17, 19, 35, 35, 38, 59, 67, 68, 70, 70, 72, 94, 94, 108, 121, 134, 139, 146, 146, 159, 161, 161, 164, 184, 184, 201, 203, 211, 211, 251, 251, 255, 263, 263, 263, 263, 277, 283, 316, 322, 331, 341, 347, 379, 379, 390, 412, 428, 434, 434, 434, 434, 439, 458, 460, 462, 462, 464, 509, 519, 532, 538, 547, 560, 577, 612, 613, 629, 639, 639, 645, 653, 653, 653, 677, 695, 703, 714, 714, 735, 746, 746, 761, 770, 780, 780, 831, 831, 832, 832, 872, 878, 884, 890, 890, 890, 906, 906, 921, 923]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#First 100 invalid rows\n",
+    "print(invalid_row[0:100])"
+   ]
   }
  ],
  "metadata": {
