Cleaned up markdown

--- a/src/ianDataProfiling.ipynb
+++ b/src/ianDataProfiling.ipynb
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2><b>Getting only the columns that deal with the company codes</b></h2>"
+    "<h3><b>Getting only the columns that deal with the company codes</b></h3>"
    ]
   },
   {
@@ -70,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2><b>Creating a profile table for validity</b></h2>"
+    "<h3><b>Creating a profile table for validity</b></h3>"
    ]
   },
   {
@@ -152,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2><b>Creating validity function</b></h2>"
+    "<h3><b>Creating validity function</b></h3>"
    ]
   },
   {
@@ -171,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2><b>Getting unique codes for each column</b></h2>"
+    "<h3><b>Getting unique codes for each column</b></h3>"
    ]
   },
   {
@@ -320,7 +320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2><b>Loading in company code dictionary</b></h2>\n"
+    "<h3><b>Loading in company code dictionary</b></h3>\n"
    ]
   },
   {
@@ -337,7 +337,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2><b>Checking validity for each column and applying the result to the profile table</b></h2>"
+    "<h3><b>Checking validity for each column and applying the result to the profile table</b></h3>"
    ]
   },
   {
@@ -390,7 +390,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2><b>Company Code Validity Results</b></h2>"
+    "<h3><b>Company Code Validity Results</b></h3>"
    ]
   },
   {
@@ -469,7 +469,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2><b>Getting the invalid company codes</b></h2>"
+    "<h3><b>Getting the invalid company codes</b></h3>"
    ]
   },
   {
@@ -506,7 +506,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2><b>Double checking to make sure that no codes in the invalid_company_codes list are valid (Should get 0% valid)</b></h2>"
+    "<h3><b>Double checking to make sure that no codes in the invalid_company_codes list are valid (Should get 0% valid)</b></h3>"
    ]
   },
   {
@@ -530,7 +530,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2><b>Listing some of the invalid codes (aka codes in the dataset but not in the dictionary)</b></h2>"
+    "<h3><b>Listing some of the invalid codes (aka codes in the dataset but not in the dictionary)</b></h3>"
    ]
   },
   {
@@ -571,7 +571,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2><b>Filtering through the dataset and keeping track of rows with at least one invalid company in them</b></h2>"
+    "<h3><b>Filtering through the dataset and keeping track of rows with at least one invalid company in them</b></h3>"
    ]
   },
   {
@@ -744,12 +744,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3><b>Dropping any of the comma-seperated values from the final profile since they are not accurately profiled</b></h3>"
+    "<h3><b>Profile</b></h3>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -786,6 +786,12 @@
        "      <td>0.992985</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>subject_codes</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.732466e-01</td>\n",
+       "      <td>0.826753</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>art</th>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.040685e-02</td>\n",
@@ -804,6 +810,24 @@
        "      <td>0.199146</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>company_codes_occur</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.813707e-01</td>\n",
+       "      <td>0.818629</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>company_codes_about</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>9.813290e-02</td>\n",
+       "      <td>0.901867</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>company_codes_lineage</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>4.418755e-03</td>\n",
+       "      <td>0.995581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>snippet</th>\n",
        "      <td>0.988084</td>\n",
        "      <td>9.037721e-01</td>\n",
@@ -814,6 +838,12 @@
        "      <td>1.000000</td>\n",
        "      <td>2.116277e-01</td>\n",
        "      <td>0.788372</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>market_index_codes</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>6.304125e-03</td>\n",
+       "      <td>0.993696</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>credit</th>\n",
@@ -864,6 +894,12 @@
        "      <td>0.970767</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>company_codes_association</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>5.147065e-07</td>\n",
+       "      <td>0.999999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>person_codes</th>\n",
        "      <td>1.000000</td>\n",
        "      <td>8.579899e-02</td>\n",
@@ -874,6 +910,12 @@
        "      <td>1.000000</td>\n",
        "      <td>3.056430e-02</td>\n",
        "      <td>0.969436</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>company_codes_relevance</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.585252e-01</td>\n",
+       "      <td>0.741475</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>source_code</th>\n",
@@ -892,6 +934,18 @@
        "      <td>1.000000</td>\n",
        "      <td>7.242949e-03</td>\n",
        "      <td>0.992757</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>company_codes</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.621789e-01</td>\n",
+       "      <td>0.637821</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>industry_codes</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>6.867213e-02</td>\n",
+       "      <td>0.931328</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>title</th>\n",
@@ -935,54 +989,57 @@
        "      <td>1.921519e-01</td>\n",
        "      <td>0.997338</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Row</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       Completeness    Uniqueness  Duplicates\n",
-       "copyright                  1.000000  7.014934e-03    0.992985\n",
-       "art                        1.000000  1.040685e-02    0.989593\n",
-       "modification_datetime      1.000000  6.468182e-01    0.353182\n",
-       "body                       0.975772  8.207384e-01    0.199146\n",
-       "snippet                    0.988084  9.037721e-01    0.106997\n",
-       "publication_date           1.000000  2.116277e-01    0.788372\n",
-       "credit                     1.000000  9.578687e-04    0.999042\n",
-       "currency_codes             1.000000  1.358825e-04    0.999864\n",
-       "region_of_origin           0.999788  1.029631e-04    0.999897\n",
-       "ingestion_datetime         1.000000  6.295663e-01    0.370434\n",
-       "modification_date          1.000000  8.869020e-01    0.113098\n",
-       "source_name                1.000000  2.196767e-03    0.997803\n",
-       "language_code              1.000000  5.147065e-07    0.999999\n",
-       "region_codes               1.000000  2.923275e-02    0.970767\n",
-       "person_codes               1.000000  8.579899e-02    0.914201\n",
-       "byline                     1.000000  3.056430e-02    0.969436\n",
-       "source_code                1.000000  2.105149e-03    0.997895\n",
-       "an                         1.000000  1.000000e+00    0.000000\n",
-       "word_count                 1.000000  7.242949e-03    0.992757\n",
-       "title                      1.000000  7.835670e-01    0.216433\n",
-       "publication_datetime       1.000000  2.116277e-01    0.788372\n",
-       "publisher_name             1.000000  7.339714e-04    0.999266\n",
-       "action                     1.000000  1.029413e-06    0.999999\n",
-       "document_type              1.000000  5.147065e-07    0.999999\n",
-       "section                    0.448260  6.175186e-03    0.997231\n",
-       "dateline                   0.013851  1.921519e-01    0.997338\n",
-       "Row                        1.000000  1.000000e+00    0.000000"
+       "                           Completeness    Uniqueness  Duplicates\n",
+       "copyright                      1.000000  7.014934e-03    0.992985\n",
+       "subject_codes                  1.000000  1.732466e-01    0.826753\n",
+       "art                            1.000000  1.040685e-02    0.989593\n",
+       "modification_datetime          1.000000  6.468182e-01    0.353182\n",
+       "body                           0.975772  8.207384e-01    0.199146\n",
+       "company_codes_occur            1.000000  1.813707e-01    0.818629\n",
+       "company_codes_about            1.000000  9.813290e-02    0.901867\n",
+       "company_codes_lineage          1.000000  4.418755e-03    0.995581\n",
+       "snippet                        0.988084  9.037721e-01    0.106997\n",
+       "publication_date               1.000000  2.116277e-01    0.788372\n",
+       "market_index_codes             1.000000  6.304125e-03    0.993696\n",
+       "credit                         1.000000  9.578687e-04    0.999042\n",
+       "currency_codes                 1.000000  1.358825e-04    0.999864\n",
+       "region_of_origin               0.999788  1.029631e-04    0.999897\n",
+       "ingestion_datetime             1.000000  6.295663e-01    0.370434\n",
+       "modification_date              1.000000  8.869020e-01    0.113098\n",
+       "source_name                    1.000000  2.196767e-03    0.997803\n",
+       "language_code                  1.000000  5.147065e-07    0.999999\n",
+       "region_codes                   1.000000  2.923275e-02    0.970767\n",
+       "company_codes_association      1.000000  5.147065e-07    0.999999\n",
+       "person_codes                   1.000000  8.579899e-02    0.914201\n",
+       "byline                         1.000000  3.056430e-02    0.969436\n",
+       "company_codes_relevance        1.000000  2.585252e-01    0.741475\n",
+       "source_code                    1.000000  2.105149e-03    0.997895\n",
+       "an                             1.000000  1.000000e+00    0.000000\n",
+       "word_count                     1.000000  7.242949e-03    0.992757\n",
+       "company_codes                  1.000000  3.621789e-01    0.637821\n",
+       "industry_codes                 1.000000  6.867213e-02    0.931328\n",
+       "title                          1.000000  7.835670e-01    0.216433\n",
+       "publication_datetime           1.000000  2.116277e-01    0.788372\n",
+       "publisher_name                 1.000000  7.339714e-04    0.999266\n",
+       "action                         1.000000  1.029413e-06    0.999999\n",
+       "document_type                  1.000000  5.147065e-07    0.999999\n",
+       "section                        0.448260  6.175186e-03    0.997231\n",
+       "dateline                       0.013851  1.921519e-01    0.997338"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "prof.drop(['company_codes', 'company_codes_occur', 'company_codes_about', 'company_codes_lineage', 'company_codes_relevance', 'company_codes_association', 'subject_codes', 'industry_codes','market_index_codes'])"
+    "prof.drop('Row', inplace = True)\n",
+    "prof"
    ]
   },
   {
